@@ -2118,3 +2118,12 @@ Thu Apr 27 14:22:57 PDT 2000
 Fixed a bug in the default configuration.  Thanks Vox.
 
 -------------------------------------------------------------------------------
+
+Thu Apr 27 21:29:17 PDT 2000
+(KainX)
+
+A configuration dialog for E-Toolbox.  Not that it actually alters anything
+yet, but we're getting there. :-)
+
+-------------------------------------------------------------------------------
+
